--- a/app/templates/fav_5.html
+++ b/app/templates/fav_5.html
@@ -5,7 +5,7 @@
 <h1 style="display: flex; justify-content: center;">Hey gurl hey!! Check out my 5 fav artists!!</h1>
 
 {% for artist in artists %}
-    <div class="card art" style="">
+    <div class="card art">
         <div class="card-body">
         <a href='https://en.wikipedia.org/wiki/{{artist}}' style="text-decoration: none; color: neon greenyellow;"> {{ artist }} </a>
         </div>
